infrastructure/cilium/config/visibility.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dns-visibility
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels: {}
  egress:
  - toEntities:
    - all
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: '*'
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: http-ingress-visibility
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
    - fromEntities:
        - all
    - toPorts:
        - ports:
            - port: "80"
              protocol: "TCP"
            - port: "8080"
              protocol: "TCP"
            - port: "9080"
              protocol: "TCP"
            - port: "50051"
              protocol: "TCP"
            - port: "9200"
              protocol: "TCP"
            - port: "443"
              protocol: "TCP"
          rules:
            http:
              - {}
  egress:
    - toEntities:
        - all
    - toPorts:
        - ports:
            - port: "80"
              protocol: "TCP"
            - port: "8080"
              protocol: "TCP"
            - port: "9080"
              protocol: "TCP"
            - port: "50051"
              protocol: "TCP"
            - port: "9200"
              protocol: "TCP"
            - port: "443"
              protocol: "TCP"
          rules:
            http:
              - {}
